--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@types/better-sqlite3": "^7.6.13",
+    "better-auth": "^1.3.24",
+    "better-sqlite3": "^12.4.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
